[package]
name = "autoroute"
version = "0.1.0"
authors = ["Cedric <cedric.brancourt@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
openapi =  { git = "https://github.com/Electron-libre/openapi.git" }
quote = "1.0.7"
proc-macro2 = "1.0.24"
syn = "1.0.48"
proc-macro-error = "1.0.4"
http = "0.2.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
env_logger = "0.8.1"
serde_qs = { git = "https://github.com/samscott89/serde_qs", features = ["actix"] }
actix-web = "3.2"
reqwest = "0.10"
futures = "0.3.8"
actix-rt = "1.1.1"
